Adição de título

--- a/src/app/components/tabela-start-wars/tabela-start-wars.component.html
+++ b/src/app/components/tabela-start-wars/tabela-start-wars.component.html
@@ -1,4 +1,4 @@
-
+<h1 style = "text-align: center;"> Star Wars Database</h1>
 
 <p-table #dt [rows]="10" [columns]="colunas" [totalRecords]="configuracaoTabela.count" [loading]="loading" [lazyLoadOnInit]="false"
   [paginator]="true" [lazy]="true" (onLazyLoad)="listarPlanetas($event)" [value]="configuracaoTabela.results"
